--- a/gradle.properties
+++ b/gradle.properties
@@ -12,12 +12,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sat Mar 26 10:04:38 IST 2016
-systemProp.http.proxyPassword=yomanas
-systemProp.https.proxyUser=b3lobby
-systemProp.https.proxyPort=3128
-systemProp.http.proxyHost=172.16.114.183
-systemProp.https.proxyPassword=yomanas
-systemProp.https.proxyHost=172.16.114.183
-systemProp.http.proxyUser=b3lobby
-systemProp.http.proxyPort=3128
+#Thu Apr 07 17:03:21 IST 2016
+systemProp.http.proxyHost=172.16.83.184
+systemProp.https.proxyPort=8080
+systemProp.https.proxyHost=172.16.83.184
+systemProp.http.proxyPort=8080
+org.gradle.daemon=true
