--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.1'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
